add rescheduling endpoint, refactor
